--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                     <p>Conceptos fundamentales y amenazas comunes en el entorno digital.</p>
                     <img src="https://tec.mx/sites/default/files/styles/header_full/public/2021-08/ciberseguridad-tec-de-monterrey.jpg?itok=H3ibmb8t"
                         alt="Introducción a la Ciberseguridad">
-                    <a href="../modulo0.html" class="card-button">Ver Más</a>
+                    <a href="../Proyecto-Plataforma-Ciberseguridad.github.io/modulos/modulo0.html" class="card-button">Ver Más</a>
                 </div>
                 <div class="card">
                     <h3>Gestión de Contraseñas</h3>
