--- a/index.html
+++ b/index.html
@@ -101,27 +101,27 @@
                 <div class="quiz-card">
                     <h3>Quiz: Gestión de Contraseñas</h3>
                     <p>Evalúa tu comprensión sobre la gestión y creación de contraseñas seguras.</p> <a
-                        href="../modulos_evaluaciones/quiz2.html" class="start-quiz-button">Comenzar Quiz</a>
+                        href="modulos/quiz2.html" class="start-quiz-button">Comenzar Quiz</a>
                 </div>
                 <div class="quiz-card">
                     <h3>Quiz: Protección de Datos</h3>
                     <p>Prueba tu conocimiento sobre cómo proteger los datos personales y empresariales.</p> <a
-                        href="../modulos_evaluaciones/quiz3.html" class="start-quiz-button">Comenzar Quiz</a>
+                        href="modulos/quiz3.html" class="start-quiz-button">Comenzar Quiz</a>
                 </div>
                 <div class="quiz-card">
                     <h3>Quiz: Respuesta ante Incidentes</h3>
                     <p>Verifica lo que sabes sobre los protocolos y estrategias para responder a ciberataques.</p> <a
-                        href="../modulos_evaluaciones/quiz4.html" class="start-quiz-button">Comenzar Quiz</a>
+                        href="modulos/quiz4.html" class="start-quiz-button">Comenzar Quiz</a>
                 </div> <!-- Evaluaciones -->
                 <div class="quiz-card">
                     <h3>Evaluación General de Ciberseguridad</h3>
                     <p>Realiza esta evaluación para medir tu conocimiento general en ciberseguridad.</p> <a
-                        href="../modulos_evaluaciones/evaluacion1.html" class="start-quiz-button">Comenzar Quiz</a>
+                        href="modulos/evaluacion1.html" class="start-quiz-button">Comenzar Quiz</a>
                 </div>
                 <div class="quiz-card">
                     <h3>Evaluación de Estrategias y Protocolos</h3>
                     <p>Evalúa tu entendimiento de las estrategias y protocolos para la respuesta ante incidentes.</p> <a
-                        href="../modulos_evaluaciones/evaluacion2.html" class="start-quiz-button">Comenzar Quiz</a>
+                        href="modulos/evaluacion2.html" class="start-quiz-button">Comenzar Quiz</a>
                 </div>
             </div>
         </section>
