--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Plataforma de Capacitación en Ciberseguridad</title>
     <link rel="icon" type="image/icon"
-        href="../imagenes/seguridad-informatica.ico">
+        href="assets/imagenes/seguridad-informatica.ico">
     <link rel="stylesheet" href="styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
